--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -233,7 +233,7 @@ a:focus {
 
 a:hover {
     text-decoration: none;
-    color: #086ad8;
+    color: #00b0ea;
 }
 
 button,
@@ -282,7 +282,7 @@ mark {
     Default Class
 */
 .text-color-primary {
-    color: #086ad8;
+    color: #00b0ea;
 }
 
 .text-color-secondary {
@@ -625,7 +625,7 @@ input[type="checkbox"] {
     width: 12px;
     height: 12px;
     opacity: 1;
-    background: #086ad8;
+    background: #00b0ea;
 }
 .swiper-pagination .swiper-pagination-bullet-active:before {
     width: 12px;
@@ -790,7 +790,7 @@ input[type="checkbox"] {
 .breadcrumb-area {
     padding-top: 114px;
     padding-bottom: 114px;
-    background-color: #f6f2ed;
+    background-color: #f5f5f5;
     background-repeat: no-repeat;
     background-position: center center;
     border-bottom-width: 0px;
@@ -845,7 +845,7 @@ input[type="checkbox"] {
     z-index: 0;
 }
 .breadcrumb-list li.active {
-    color: #6d70a6;
+    color: #00b0ea;
 }
 
 .page-pagination li {
@@ -895,7 +895,7 @@ input[type="checkbox"] {
     z-index: 999999;
 }
 .preloader-active .preloader-area-wrap .spinner div {
-    background-color: #086ad8;
+    background-color: #00b0ea;
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -2503,10 +2503,10 @@ input[type="checkbox"] {
     /* logo */
 }
 .header__logo {
-    -webkit-flex-basis: 20%;
+    /* -webkit-flex-basis: 20%;
     -ms-flex-preferred-size: 20%;
-    flex-basis: 20%;
-    padding: 14px 0;
+    flex-basis: 20%; */
+    /* padding: 5px 0; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -2559,21 +2559,22 @@ input[type="checkbox"] {
     }
 }
 .header.default-menu-style .header__logo {
-    -webkit-flex-basis: 23.5%;
-    -ms-flex-preferred-size: 23.5%;
-    flex-basis: 23.5%;
+    /* -webkit-flex-basis: 10.5%;
+    -ms-flex-preferred-size: 10.5%;
+    flex-basis: 10.5%; */
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    padding: 14px 0;
+    min-height:100%;
+    /* padding: 14px 0; */
 }
 @media only screen and (min-width: 1200px) and (max-width: 1499px) {
-    .header.default-menu-style .header__logo {
-        -webkit-flex-basis: 13%;
-        -ms-flex-preferred-size: 13%;
-        flex-basis: 13%;
-    }
+    /* .header.default-menu-style .header__logo {
+        -webkit-flex-basis: 10%;
+        -ms-flex-preferred-size: 10%;
+        flex-basis: 10%;
+    } */
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px),
     only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2599,10 +2600,10 @@ input[type="checkbox"] {
     }
 }
 .header.default-menu-style .header-midle-box {
-    -webkit-box-flex: 1;
+    /* -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
-    flex-grow: 1;
+    flex-grow: 1; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -2616,28 +2617,28 @@ input[type="checkbox"] {
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
-    -webkit-flex-basis: 23.5%;
-    -ms-flex-preferred-size: 23.5%;
-    flex-basis: 23.5%;
+    /* -webkit-flex-basis: 13.5%;
+    -ms-flex-preferred-size: 13.5%;
+    flex-basis: 13.5%; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: end;
-    -webkit-justify-content: center;
+    -webkit-justify-content: end;
     -ms-flex-pack: end;
-    justify-content: center;
+    justify-content: end;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1499px) {
-    .header.default-menu-style .header-right-box {
-        -webkit-flex-basis: 23%;
-        -ms-flex-preferred-size: 23%;
-        flex-basis: 23%;
-    }
+    /* .header.default-menu-style .header-right-box {
+        -webkit-flex-basis: 13%;
+        -ms-flex-preferred-size: 13%;
+        flex-basis: 13%;
+    } */
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .header.default-menu-style .header-right-box {
@@ -3230,7 +3231,7 @@ input[type="checkbox"] {
     bottom: 0;
     position: absolute;
     left: 0;
-    background-color: #086ad8;
+    background-color: #00b0ea;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
@@ -3255,6 +3256,23 @@ input[type="checkbox"] {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
+
+.navigation-menu > ul > li.hasnt-children > a {
+    position: relative;
+}
+.navigation-menu > ul > li.hasnt-children > a:after {
+    position: static;
+    margin-left: 5px;
+    /* font-family: "Font Awesome 5 Free";
+    content: "\f107"; */
+    font-weight: 600;
+    font-size: 14px;
+    vertical-align: middle;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
 .navigation-menu > ul > li.has-children--multilevel-submenu {
     position: relative;
 }
@@ -3281,14 +3299,14 @@ input[type="checkbox"] {
 }
 .navigation-menu > ul > li:hover > a:after,
 .navigation-menu > ul > li.active > a:after {
-    color: #086ad8;
+    color: #00b0ea;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 .navigation-menu > ul > li:hover > a span,
 .navigation-menu > ul > li.active > a span {
-    color: #086ad8;
+    color: #00b0ea;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
@@ -3332,7 +3350,7 @@ input[type="checkbox"] {
     left: 0;
     -webkit-box-shadow: 0 2px 29px rgba(0, 0, 0, 0.05);
     box-shadow: 0 2px 29px rgba(0, 0, 0, 0.05);
-    border-bottom: 3px solid #086ad8;
+    border-bottom: 3px solid #00b0ea;
     background-color: #ffffff;
     -webkit-transform: translateY(50px);
     -ms-transform: translateY(50px);
@@ -3348,7 +3366,7 @@ input[type="checkbox"] {
     transition-duration: 0.4s;
     visibility: hidden;
     opacity: 0;
-    min-width: 240px;
+    min-width: 310px;
     padding: 20px 0;
     z-index: 9;
 }
@@ -3376,13 +3394,13 @@ input[type="checkbox"] {
     left: auto;
     right: 0;
     z-index: -1;
-    background-color: #086ad8;
+    background-color: #00b0ea;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
 }
 .submenu > li > a:hover {
-    color: #086ad8;
+    color: #00b0ea;
 }
 .submenu > li > a:hover > span:after {
     width: 100%;
@@ -3398,7 +3416,7 @@ input[type="checkbox"] {
     z-index: 9;
 }
 .submenu > li.active > a {
-    color: #086ad8;
+    color: #00b0ea;
 }
 .submenu > li.has-children > a {
     position: relative;
@@ -3421,10 +3439,10 @@ input[type="checkbox"] {
     color: #ababab;
 }
 .submenu > li.has-children > a:hover:after {
-    color: #086ad8;
+    color: #00b0ea;
 }
 .submenu > li.has-children.active > a {
-    color: #086ad8;
+    color: #00b0ea;
 }
 .submenu .submenu {
     top: 0px;
@@ -3531,7 +3549,7 @@ input[type="checkbox"] {
     left: 0;
     -webkit-box-shadow: 0 2px 29px rgba(0, 0, 0, 0.05);
     box-shadow: 0 2px 29px rgba(0, 0, 0, 0.05);
-    border-bottom: 3px solid #086ad8;
+    border-bottom: 3px solid #00b0ea;
     background-color: #ffffff;
     -webkit-transform: translateY(50px);
     -ms-transform: translateY(50px);
@@ -3593,7 +3611,7 @@ input[type="checkbox"] {
     transition: 0.1s;
 }
 .megamenu--mega > li > ul > li > a:hover {
-    color: #086ad8;
+    color: #00b0ea;
 }
 .megamenu--mega > li > ul > li > a:hover span:after {
     width: 100%;
@@ -3612,13 +3630,13 @@ input[type="checkbox"] {
     left: auto;
     right: 0;
     z-index: -1;
-    background-color: #086ad8;
+    background-color: #00b0ea;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
 }
 .megamenu--mega > li > ul > li.active > a {
-    color: #086ad8;
+    color: #00b0ea;
 }
 
 .container-fluid .megamenu--mega {
@@ -3652,15 +3670,13 @@ input[type="checkbox"] {
     margin-left: 30px;
 }
 .mobile-navigation-icon:hover i {
-    background-color: #086ad8;
+    background-color: #00b0ea;
 }
 .mobile-navigation-icon:hover i:before {
-    width: 80%;
-    background-color: #086ad8;
+    background-color: #00b0ea;
 }
 .mobile-navigation-icon:hover i:after {
-    background-color: #086ad8;
-    width: 60%;
+    background-color: #00b0ea;
 }
 .mobile-navigation-icon i {
     position: absolute;
@@ -3797,7 +3813,7 @@ input[type="checkbox"] {
     height: 100%;
     float: right;
     cursor: default;
-    background: #086ad8;
+    background: #00b0ea;
     -webkit-transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
     -o-transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -4900,7 +4916,7 @@ ul.footer-widget__horizontal-list li {
     line-height: 54px;
     letter-spacing: 0em;
     color: #ffffff;
-    background: #086ad8;
+    background: #00b0ea;
     -webkit-transform: translateY(0px);
     -ms-transform: translateY(0px);
     transform: translateY(0px);
@@ -4910,7 +4926,7 @@ ul.footer-widget__horizontal-list li {
 .btn:focus {
     font-weight: 500;
     color: #ffffff;
-    background: #086ad8;
+    background: #00b0ea;
     -webkit-transform: translateY(-3px);
     -ms-transform: translateY(-3px);
     transform: translateY(-3px);
@@ -4989,10 +5005,10 @@ ul.footer-widget__horizontal-list li {
     right: 0;
     width: 0;
     height: 1px;
-    background-color: #d2a98e;
+    background-color: #00b0ea;
 }
 .hover-style-link:hover {
-    color: #d2a98e;
+    color: #00b0ea;
 }
 .hover-style-link:hover:after {
     left: 0;
@@ -5000,13 +5016,13 @@ ul.footer-widget__horizontal-list li {
     right: auto;
 }
 .hover-style-link--secondary {
-    color: #d2a98e;
+    color: #00b0ea;
 }
 .hover-style-link--secondary:after {
-    background-color: #d2a98e;
+    background-color: #00b0ea;
 }
 .hover-style-link--secondary:hover {
-    color: #d2a98e;
+    color: #00b0ea;
 }
 .hover-style-link--white {
     color: #ffffff;
@@ -5334,10 +5350,11 @@ ul.footer-widget__horizontal-list li {
 }
 
 .cta-bg-image_two {
-    background-color: #f6f2ed;
-    background-image: url(../images/patterns/mitech-home-appointment-call-to-action-bg-image.webp);
+    background-color: #f3f3f3;
+    background-image: url(../images/bg/contact-partner.png);
     background-repeat: no-repeat;
     background-position: top right;
+    background-size: cover;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
@@ -9451,14 +9468,14 @@ ol {
 .ht-social-networks.flat-round .social-link:hover,
 .ht-social-networks.solid-rounded-icon .social-link:hover {
     color: #ffffff;
-    background: #086ad8;
+    background: #00b0ea;
 }
 .ht-social-networks.solid-rounded-icon .social-link {
     background: transparent;
     border: 1px solid #e0e0e0;
 }
 .ht-social-networks.solid-rounded-icon .social-link:hover {
-    border: 1px solid #086ad8;
+    border: 1px solid #00b0ea;
     color: #ffffff;
 }
 .ht-social-networks.solid-rounded-icon.social-white .social-link {
@@ -9922,35 +9939,35 @@ ol {
  * set default color for tooltip arrows
  */
 .hint--top-left:before {
-    border-top-color: #086ad8;
+    border-top-color: #00b0ea;
 }
 
 .hint--top-right:before {
-    border-top-color: #086ad8;
+    border-top-color: #00b0ea;
 }
 
 .hint--top:before {
-    border-top-color: #086ad8;
+    border-top-color: #00b0ea;
 }
 
 .hint--bottom-left:before {
-    border-bottom-color: #086ad8;
+    border-bottom-color: #00b0ea;
 }
 
 .hint--bottom-right:before {
-    border-bottom-color: #086ad8;
+    border-bottom-color: #00b0ea;
 }
 
 .hint--bottom:before {
-    border-bottom-color: #086ad8;
+    border-bottom-color: #00b0ea;
 }
 
 .hint--left:before {
-    border-left-color: #086ad8;
+    border-left-color: #00b0ea;
 }
 
 .hint--right:before {
-    border-right-color: #086ad8;
+    border-right-color: #00b0ea;
 }
 
 .hint--white:after {
@@ -11327,7 +11344,7 @@ ol {
 .contact-info-one .btn--secondary:hover,
 .contact-info-two .btn--secondary:hover,
 .contact-info-three .btn--secondary:hover {
-    background: #086ad8;
+    background: #00b0ea;
 }
 
 .contact-info-two .icon {
